src/objects/ttt__c.object
<CustomObject>
    <fields>
        <fullName>auto_number_field__c</fullName>
        <label>auto_number_field</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>diz_number__c</fullName>
        <description>test</description>
        <label>diz_number__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>diz_phone2__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_phone2__c</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>diz_phone__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_phone__c</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>diz_picklist__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_picklist__c</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>picklist__c</fullName>
        <label>picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>a1</fullName>
                </value>
                <value>
                    <fullName>a2</fullName>
                </value>
                <value>
                    <fullName>a3</fullName>
                </value>
                <value>
                    <fullName>a41</fullName>
                    <isActive>false</isActive>
                    <label>a41</label>
                </value>
                <value>
                    <fullName>a51</fullName>
                    <isActive>false</isActive>
                    <label>a51</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ttt</label>
    <nameField>
        <label>ttt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ttt</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rule1</fullName>
        <active>false</active>
        <errorConditionFormula>false</errorConditionFormula>
        <errorDisplayField>picklist__c</errorDisplayField>
        <errorMessage>error</errorMessage>
    </validationRules>
</CustomObject>